Bug 17586. Use more robust condition to determine stream length ('-1') for HTTP-index streams on directories. Add lots of logging along the way. r=syd,valeski.